@@ -8,6 +8,7 @@
 	- fix: prefer pgp2.6.3 over pgp5 if both are installed.
 	- make sure that rpm-the-package auto-requires glibc.
 	- fix: non-apache servers need "GET ... HTTP/1.0" by the book.
+	- fix: %doc wrongly inherits lang from last entry in %files.
 
 2.94 -> 2.95
 	- fix: last update transaction set segfault bug in installer.
